# newsleopard

./: .env.example  .gitignore  DEV_SETUP.md  PROJECT_STRUCTURE.md  docker-compose.yml
backend/: .env.example  .env.localstack  Dockerfile  README.md  SQS_LOCAL_DEV.md  SQS_SETUP.md  alembic.ini  docker-compose.localstack-simple.yml  docker-compose.yml  pyproject.toml  requirements.txt  run_dev.sh  sqs_monitor.py  sqs_worker.py  start.py
backend/alembic/: env.py
backend/alembic/versions/: 05e79d53b42e_create_analysis_records_table.py  create_send_records_tables.py
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/core/: config.py  dependencies.py  error_handlers.py  exceptions.py  sqs_config.py
backend/app/crud/: __init__.py  analysis.py  batch_send_record.py  message_send_record.py
backend/app/db/: database.py
backend/app/models/: __init__.py  analysis.py  batch_send_record.py  message_send_record.py
backend/app/schemas/: __init__.py  analysis.py  send.py
backend/app/services/: __init__.py  ai_client.py  analysis_service.py  send_service.py  sqs_queue_manager.py
backend/app/services/ai_client/: __init__.py  base.py  claude_client.py  factory.py  openai_client.py
backend/app/tests/: conftest.py  test_ai_client.py  test_analysis_api.py  test_analysis_crud.py  test_analysis_service.py  test_analysis_simple.py  test_main.py  test_refactored_analysis.py  test_send_records.py
backend/app/workers/: sqs_worker.py
backend/tests/: test_send_api.py  test_sqs_system.py
backend/volume/cache/: machine.json
devtools/: sqs_monitor.py
(+45 files in other folders)
